# Socratic-PM

./: AGENTS.md  MEMORY.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/socratic-pm/: CLAUDE.md  SKILL.md
.claude/skills/socratic-pm/modes/: _shared.md  checkpoint.md  context.md  debug.md  ingest.md  issue.md  plan.md  review.md  scaffold.md  status.md
api/: main.py
api/routers/: graph.py  ingest.py
config/: project.example.yml
docs/: NEO4J_SETUP.md  architecture.md  plan.md  prd.md  teaching.md  updates.md
docs/superpowers/plans/: 2026-04-20-socratic-pm-phase2.md
docs/superpowers/specs/: 2026-04-20-socratic-pm-phase1-design.md
scripts/: ingest.py  schema.cypher  telemetry.py
